--- a/RepositoryParser/RepositoryParser/View/HourActivityViews/HourActivityChartView.xaml
+++ b/RepositoryParser/RepositoryParser/View/HourActivityViews/HourActivityChartView.xaml
@@ -9,8 +9,10 @@
              xmlns:imageButton="clr-namespace:RepositoryParser.Controls.ImageButton;assembly=RepositoryParser.Controls"
              xmlns:extensions="clr-namespace:RepositoryParser.Controls.Extensions;assembly=RepositoryParser.Controls"
              xmlns:circleHeaderButton="clr-namespace:RepositoryParser.Controls.CircleHeaderButton;assembly=RepositoryParser.Controls"
+             xmlns:metroChart="clr-namespace:De.TorstenMandelkow.MetroChart;assembly=De.TorstenMandelkow.MetroChart"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="300"
+             DataContext="{Binding Source={StaticResource Locator}, Path=HourActivity}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -22,25 +24,21 @@
 
         <TabControl Grid.Row="0">
             <TabItem Header="{x:Static resw:Resources.Chart}">
-                <chartingToolkit:Chart x:Name="Chart" Title="{x:Static resw:Resources.CountOfCommits}" Background="{StaticResource Grey}">
-                    <chartingToolkit:Chart.LegendStyle>
-                        <Style TargetType="Control">
-                            <Setter Property="Width" Value="0"/>
-                            <Setter Property="Height" Value="0"/>
-                        </Style>
-                    </chartingToolkit:Chart.LegendStyle>
-                    <chartingToolkit:Chart.Series>
-                        <chartingToolkit:ColumnSeries
-                                    ItemsSource="{Binding KeyCollection, Mode=OneWay}"
-                                    DependentValueBinding="{Binding Path=Value}"
-                                    IndependentValueBinding="{Binding Path=Key}" 
-                            />
-                    </chartingToolkit:Chart.Series>
-                </chartingToolkit:Chart>
+                <metroChart:StackedColumnChart
+                    x:Name="StackedColumnChartInstance"
+                    ChartTitle=""
+                    ChartSubTitle=""
+                    Padding="0"
+                    ChartBorderThickness="1"
+                    ChartMargin="0"
+                    Background="Transparent"
+                    ChartLegendVisibility="Collapsed"
+                    Palette="{StaticResource RepositoryAnalyserChartPalette}"
+                    />
             </TabItem>
             <TabItem Header="{x:Static resw:Resources.List}">
                 <DataGrid 
-                    ItemsSource="{Binding KeyCollection}"
+                    ItemsSource="{Binding DataCollection}"
                     CanUserSortColumns="True"
                     AutoGenerateColumns="False"
                     ColumnWidth="auto"
@@ -50,8 +48,15 @@
                     extensions:DataGridExtensions.LastColumnFill="True"
                       >
                     <DataGrid.Columns>
-                        <DataGridTextColumn Binding="{Binding Key}" Header="{x:Static resw:Resources.Hour}"/>
-                        <DataGridTextColumn Binding="{Binding Value}" Header="{x:Static resw:Resources.CountOfCommits}"/>
+                        <DataGridTextColumn Binding="{Binding ChartKey}" Header="{x:Static resw:Resources.Hour}"/>
+                        <DataGridTextColumn Binding="{Binding ChartValue}" Header="{x:Static resw:Resources.CountOfCommits}">
+                            <DataGridTextColumn.CellStyle>
+                                <Style>
+                                    <Setter Property="FrameworkElement.HorizontalAlignment" Value="Center"/>
+                                </Style>
+                            </DataGridTextColumn.CellStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Binding="{Binding RepositoryValue}" Header="{x:Static resw:Resources.GitRepository}"/>
                     </DataGrid.Columns>
 
                 </DataGrid>
