--- a/RepositoryParser/RepositoryParser/View/FilteringView.xaml
+++ b/RepositoryParser/RepositoryParser/View/FilteringView.xaml
@@ -10,6 +10,8 @@
              xmlns:imageButton="clr-namespace:RepositoryParser.Controls.ImageButton;assembly=RepositoryParser.Controls"
              xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:enums="clr-namespace:RepositoryParser.Helpers.Enums"
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+             xmlns:extensions="clr-namespace:RepositoryParser.Controls.Extensions;assembly=RepositoryParser.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="600"
              DataContext="{Binding Source={StaticResource Locator}, Path=Filtering}"
@@ -97,12 +99,19 @@
                       HorizontalAlignment="Stretch" 
                       Margin="5,0"
                       ItemsSource="{Binding AuthorsCollection}" 
-                      SelectedItem="{Binding AuthorsSelectedItem}"
                       IsSynchronizedWithCurrentItem="False" 
                       BorderThickness="0"
                       ItemContainerStyle="{StaticResource RepositoryAnalyserListViewItem}"
                       Foreground="Black"
-                      />
+                      SelectionMode="Multiple"
+                      extensions:ListViewExtensions.SelectedItems="{Binding Path=SelectedAuthors, Mode=TwoWay}"
+                      >
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="SelectionChanged">
+                            <i:InvokeCommandAction Command="{Binding SelectedAuthorsItemChanged}"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </ListView>
             </Grid>
 
             <Grid x:Name="DateGrid" Grid.Row="0" Grid.Column="1" Margin="2,5">
@@ -228,11 +237,18 @@
                     HorizontalAlignment="Stretch" 
                     VerticalAlignment="Stretch"
                     Margin="5,0"
-                    SelectedItem="{Binding RepositorySelectedItem}"
-                    IsSynchronizedWithCurrentItem="True"
+                    IsSynchronizedWithCurrentItem="False"
                     BorderThickness="0"
                     ItemContainerStyle="{StaticResource RepositoryAnalyserListViewItem}"
-                    Foreground="Black"/>
+                    Foreground="Black"
+                    SelectionMode="Multiple"
+                    extensions:ListViewExtensions.SelectedItems="{Binding SelectedRepositories, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="SelectionChanged">
+                            <i:InvokeCommandAction Command="{Binding SelectedRepositoriesItemChanged}"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </ListView>
                 <Border Grid.Row="2" Background="Transparent" BorderThickness="0,0,0,1" BorderBrush="{StaticResource MyGreen}" Margin="5,0">
                     <TextBlock
                        Text="{x:Static resw:Resources.FilteringPickBranch}" 
