--- a/RepositoryParser/RepositoryParser/View/DayActivityViews/DayActivityChartView.xaml
+++ b/RepositoryParser/RepositoryParser/View/DayActivityViews/DayActivityChartView.xaml
@@ -9,10 +9,16 @@
              xmlns:imageButton="clr-namespace:RepositoryParser.Controls.ImageButton;assembly=RepositoryParser.Controls"
              xmlns:extensions="clr-namespace:RepositoryParser.Controls.Extensions;assembly=RepositoryParser.Controls"
              xmlns:circleHeaderButton="clr-namespace:RepositoryParser.Controls.CircleHeaderButton;assembly=RepositoryParser.Controls"
+             xmlns:metroChart="clr-namespace:De.TorstenMandelkow.MetroChart;assembly=De.TorstenMandelkow.MetroChart"
+             xmlns:enums="clr-namespace:RepositoryParser.Helpers.Enums"
+             xmlns:conventers="clr-namespace:RepositoryParser.Conventers"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="600"
              DataContext="{Binding Source={StaticResource Locator}, Path=DayActivity }"
              >
+    <UserControl.Resources>
+        <conventers:CountOfRepositoriesToVisibilityConventer x:Key="CountOfRepositoriesToVisibilityConventer"/>
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -22,39 +28,56 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <TabControl Grid.Row="0">
+        <TextBlock
+            Grid.Row="0"
+            Visibility="{Binding Path=CountOfSelectedRepositories, 
+                                 ConverterParameter={x:Static enums:VisibilityConventerEnumDirection.Inverse},
+                                 Converter={StaticResource CountOfRepositoriesToVisibilityConventer}}"
+            Text="{x:Static resw:Resources.NoDataToDisplay}"
+            Foreground="#666666"
+            FontSize="28"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            FontWeight="Light"
+            TextWrapping="WrapWithOverflow"/>
+        <TabControl 
+            Grid.Row="0"
+            Visibility="{Binding Path=CountOfSelectedRepositories, 
+                                 ConverterParameter={x:Static enums:VisibilityConventerEnumDirection.Normal},
+                                 Converter={StaticResource CountOfRepositoriesToVisibilityConventer}}">
             <TabItem Header="{x:Static resw:Resources.Chart}">
-                <chartingToolkit:Chart Title="{x:Static resw:Resources.CountOfCommits}" Background="{StaticResource Grey}">
-                    <chartingToolkit:Chart.LegendStyle>
-                        <Style TargetType="Control">
-                            <Setter Property="Width" Value="0" />
-                            <Setter Property="Height" Value="0" />
-                        </Style>
-                    </chartingToolkit:Chart.LegendStyle>
-                    <chartingToolkit:Chart.Series>
-                        <chartingToolkit:LineSeries
-                                    ItemsSource="{Binding KeyCollection, Mode=OneWay}"
-                                    DependentValueBinding="{Binding Path=Value}"
-                                    IndependentValueBinding="{Binding Path=Key}" 
-                            />
-                    </chartingToolkit:Chart.Series>
-                </chartingToolkit:Chart>
-                
+                <metroChart:StackedColumnChart
+                    x:Name="StackedColumnChartInstance"
+                    ChartTitle=""
+                    ChartSubTitle=""
+                    Padding="0"
+                    ChartBorderThickness="1"
+                    ChartMargin="0"
+                    Background="Transparent"
+                    ChartLegendVisibility="Collapsed"
+                    Palette="{StaticResource RepositoryAnalyserChartPalette}"
+                    />
             </TabItem>
             <TabItem Header="{x:Static resw:Resources.List}">
                 <DataGrid
-                    ItemsSource="{Binding KeyCollection}"
+                    ItemsSource="{Binding DataCollection}"
                     CanUserSortColumns="True"
                     AutoGenerateColumns="False"
                     ColumnWidth="auto"
                     IsReadOnly="True"
                     VerticalScrollBarVisibility="Auto"
                     Style="{StaticResource AzureDataGrid}"
-                    extensions:DataGridExtensions.LastColumnFill="True"
-                      >
+                    extensions:DataGridExtensions.LastColumnFill="True">
                     <DataGrid.Columns>
-                        <DataGridTextColumn Binding="{Binding Key}" Header="{x:Static resw:Resources.Day}"/>
-                        <DataGridTextColumn Binding="{Binding Value}" Header="{x:Static resw:Resources.CountOfCommits}"/>
+                        <DataGridTextColumn Binding="{Binding ChartKey}" Header="{x:Static resw:Resources.Hour}"/>
+                        <DataGridTextColumn Binding="{Binding ChartValue}" Header="{x:Static resw:Resources.CountOfCommits}">
+                            <DataGridTextColumn.CellStyle>
+                                <Style>
+                                    <Setter Property="FrameworkElement.HorizontalAlignment" Value="Center"/>
+                                </Style>
+                            </DataGridTextColumn.CellStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Binding="{Binding RepositoryValue}" Header="{x:Static resw:Resources.Repository}"/>
                     </DataGrid.Columns>
 
                 </DataGrid>
@@ -63,6 +86,7 @@
 
         <DockPanel Grid.Row="1" HorizontalAlignment="Left" Margin="0">
             <circleHeaderButton:CircleHeaderButton 
+                CommandParameter="{Binding ElementName=Root, Path=DataContext}"
                 Command="{Binding ExportFileCommand}"
                 ImageSource="../../Assets/Icons/PNG_DarkGray/Export-100.png"
                 ToolTip="{x:Static resw:Resources.ExportToFileButton}"
