New charting system - part 4: UserActivityChart

--- a/RepositoryParser/RepositoryParser/View/UsersActivityViews/UserActivityContentProviderView.xaml
+++ b/RepositoryParser/RepositoryParser/View/UsersActivityViews/UserActivityContentProviderView.xaml
@@ -15,7 +15,7 @@
              
              >
     <UserControl.Resources>
-        <DataTemplate DataType="{x:Type userActivityViewModels:ChartWindowViewModel}">
+        <DataTemplate DataType="{x:Type userActivityViewModels:UsersActivityViewModel}">
             <local:UserActivityChartView/>
         </DataTemplate>
 
