--- a/RepositoryParser/RepositoryParser/View/UsersActivityViews/UserActivityChartView.xaml
+++ b/RepositoryParser/RepositoryParser/View/UsersActivityViews/UserActivityChartView.xaml
@@ -3,16 +3,22 @@
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-                xmlns:local="clr-namespace:RepositoryParser.View.UsersActivityViews"
                 xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
                 xmlns:resw="clr-namespace:RepositoryParser.Properties"
-                xmlns:imageButton="clr-namespace:RepositoryParser.Controls.ImageButton;assembly=RepositoryParser.Controls"
                 xmlns:extensions="clr-namespace:RepositoryParser.Controls.Extensions;assembly=RepositoryParser.Controls"
                 xmlns:circleHeaderButton="clr-namespace:RepositoryParser.Controls.CircleHeaderButton;assembly=RepositoryParser.Controls"
+                xmlns:metroChart="clr-namespace:De.TorstenMandelkow.MetroChart;assembly=De.TorstenMandelkow.MetroChart"
+                xmlns:enums="clr-namespace:RepositoryParser.Helpers.Enums"
+                xmlns:conventers="clr-namespace:RepositoryParser.Conventers"
                 mc:Ignorable="d" 
                 d:DesignHeight="600" d:DesignWidth="600"
                 DataContext="{Binding Source={StaticResource Locator}, Path=UsersActivity}"
                 >
+    <UserControl.Resources>
+        <conventers:CountOfRepositoriesToVisibilityConventer x:Key="CountOfRepositoriesToVisibilityConventer"/>
+        <conventers:IntToLenghtConventer x:Key="IntToLenghtConventer"/>
+    </UserControl.Resources>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -22,38 +28,61 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-
-        <TabControl Grid.Row="0" Grid.Column="0">
+        <TextBlock
+            Grid.Row="0"
+            Visibility="{Binding Path=CountOfSelectedRepositories, 
+                                 ConverterParameter={x:Static enums:VisibilityConventerEnumDirection.Inverse},
+                                 Converter={StaticResource CountOfRepositoriesToVisibilityConventer}}"
+            Text="{x:Static resw:Resources.NoDataToDisplay}"
+            Foreground="#666666"
+            FontSize="28"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            FontWeight="Light"
+            TextWrapping="WrapWithOverflow"/>
+        
+        <TabControl Grid.Row="0"
+                    Grid.Column="0"
+                    Visibility="{Binding Path=CountOfSelectedRepositories, 
+                    ConverterParameter={x:Static enums:VisibilityConventerEnumDirection.Normal},
+                    Converter={StaticResource CountOfRepositoriesToVisibilityConventer}}">
             <TabItem Header="{x:Static resw:Resources.Chart}">
-                <chartingToolkit:Chart x:Name="Chart" 
-                                       Title="{x:Static resw:Resources.CountOfCommits}" 
-                                       Background="{StaticResource Grey}" 
-                                       LegendTitle="{x:Static resw:Resources.Legend}"
-                                       >
-                    <chartingToolkit:Chart.Series>
-                        <chartingToolkit:PieSeries
-                            ItemsSource="{Binding KeyCollection, Mode=OneWay}"
-                            DependentValueBinding="{Binding Path=Value}"
-                            IndependentValueBinding="{Binding Path=Key}" 
-                            Background="{StaticResource Graphite}" 
+                <ScrollViewer CanContentScroll="True">
+                    <metroChart:ClusteredBarChart
+                            x:Name="StackedColumnChartInstance"
+                            ChartTitle=""
+                            ChartSubTitle=""
+                            Padding="0"
+                            ChartBorderThickness="1"
+                            ChartMargin="0"
+                            Background="Transparent"
+                            ChartLegendVisibility="Collapsed"
+                            Palette="{StaticResource RepositoryAnalyserChartPalette}"
+                            ClipToBounds="False"
+                            Height="{Binding CountOfAuthors, Converter={StaticResource IntToLenghtConventer}}"
                             />
-                    </chartingToolkit:Chart.Series>
-                </chartingToolkit:Chart>
+                </ScrollViewer>
             </TabItem>
             <TabItem Header="{x:Static resw:Resources.List}">
                 <DataGrid Grid.Row="1" Grid.Column="0"
-                    ItemsSource="{Binding KeyCollection}"
+                    ItemsSource="{Binding DataCollection}"
                     CanUserSortColumns="True"
                     AutoGenerateColumns="False"
                     ColumnWidth="auto"
                     IsReadOnly="True"
                     VerticalScrollBarVisibility="Auto"
                     Style="{StaticResource AzureDataGrid}"
-                    extensions:DataGridExtensions.LastColumnFill="True"
-                      >
+                    extensions:DataGridExtensions.LastColumnFill="True">
                     <DataGrid.Columns>
-                        <DataGridTextColumn Binding="{Binding Key}" Header="{x:Static resw:Resources.CommitsList_Author}" Width="200"/>
-                        <DataGridTextColumn Binding="{Binding Value}" Header="{x:Static resw:Resources.CountOfCommits}"/>
+                        <DataGridTextColumn Binding="{Binding ChartKey}" Header="{x:Static resw:Resources.CommitsList_Author}"/>
+                        <DataGridTextColumn Binding="{Binding ChartValue}" Header="{x:Static resw:Resources.CountOfCommits}">
+                            <DataGridTextColumn.CellStyle>
+                                <Style>
+                                    <Setter Property="FrameworkElement.HorizontalAlignment" Value="Center"/>
+                                </Style>
+                            </DataGridTextColumn.CellStyle>
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Binding="{Binding RepositoryValue}" Header="{x:Static resw:Resources.Repository}"/>
                     </DataGrid.Columns>
 
                 </DataGrid>
