Multithreading in HourActivityChart

--- a/RepositoryParser/RepositoryParser/Resources/Themes/ChartColorPalette.xaml
+++ b/RepositoryParser/RepositoryParser/Resources/Themes/ChartColorPalette.xaml
@@ -90,7 +90,7 @@
                 <LinearGradientBrush.GradientStops>
                     <GradientStopCollection>
                         <GradientStop Color="#666666" Offset="0" />
-                        <GradientStop Color="#999999" Offset="1" />
+                        <GradientStop Color="#888888" Offset="1" />
                     </GradientStopCollection>
                 </LinearGradientBrush.GradientStops>
             </LinearGradientBrush>
@@ -129,8 +129,8 @@
             <LinearGradientBrush x:Key="Brush6" StartPoint="0,0.5" EndPoint="1,0.5" Opacity="1">
                 <LinearGradientBrush.GradientStops>
                     <GradientStopCollection>
-                        <GradientStop Color="#4d0c57" Offset="0" />
-                        <GradientStop Color="#d100ce" Offset="1" />
+                        <GradientStop Color="#115aef" Offset="0" />
+                        <GradientStop Color="#3080ff" Offset="1" />
                     </GradientStopCollection>
                 </LinearGradientBrush.GradientStops>
             </LinearGradientBrush>
@@ -139,8 +139,8 @@
             <LinearGradientBrush x:Key="Brush7" StartPoint="0,0.5" EndPoint="1,0.5" Opacity="1">
                 <LinearGradientBrush.GradientStops>
                     <GradientStopCollection>
-                        <GradientStop Color="#463a33" Offset="0" />
-                        <GradientStop Color="#180901" Offset="1" />
+                        <GradientStop Color="#990000" Offset="0" />
+                        <GradientStop Color="#800000" Offset="1" />
                     </GradientStopCollection>
                 </LinearGradientBrush.GradientStops>
             </LinearGradientBrush>
@@ -149,8 +149,8 @@
             <LinearGradientBrush x:Key="Brush8" StartPoint="0,0.5" EndPoint="1,0.5" Opacity="1">
                 <LinearGradientBrush.GradientStops>
                     <GradientStopCollection>
-                        <GradientStop Color="#2e3a4f" Offset="0" />
-                        <GradientStop Color="#115aef" Offset="1" />
+                        <GradientStop Color="#4169e1" Offset="0" />
+                        <GradientStop Color="#6897bb" Offset="1" />
                     </GradientStopCollection>
                 </LinearGradientBrush.GradientStops>
             </LinearGradientBrush>
