Added multithreading to other charts.

--- a/RepositoryParser/RepositoryParser/View/DayActivityViews/DayActivityChartView.xaml
+++ b/RepositoryParser/RepositoryParser/View/DayActivityViews/DayActivityChartView.xaml
@@ -12,12 +12,14 @@
              xmlns:metroChart="clr-namespace:De.TorstenMandelkow.MetroChart;assembly=De.TorstenMandelkow.MetroChart"
              xmlns:enums="clr-namespace:RepositoryParser.Helpers.Enums"
              xmlns:conventers="clr-namespace:RepositoryParser.Conventers"
+             xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="600"
              DataContext="{Binding Source={StaticResource Locator}, Path=DayActivity }"
              >
     <UserControl.Resources>
         <conventers:CountOfRepositoriesToVisibilityConventer x:Key="CountOfRepositoriesToVisibilityConventer"/>
+        <conventers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -40,13 +42,20 @@
             VerticalAlignment="Center"
             FontWeight="Light"
             TextWrapping="WrapWithOverflow"/>
+        
         <TabControl 
             Grid.Row="0"
             Visibility="{Binding Path=CountOfSelectedRepositories, 
                                  ConverterParameter={x:Static enums:VisibilityConventerEnumDirection.Normal},
                                  Converter={StaticResource CountOfRepositoriesToVisibilityConventer}}">
             <TabItem Header="{x:Static resw:Resources.Chart}">
-                <metroChart:StackedColumnChart
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+                    <metroChart:StackedColumnChart
                     x:Name="StackedColumnChartInstance"
                     ChartTitle=""
                     ChartSubTitle=""
@@ -54,9 +63,11 @@
                     ChartBorderThickness="1"
                     ChartMargin="0"
                     Background="Transparent"
-                    ChartLegendVisibility="Collapsed"
+                    ChartLegendVisibility="Visible"
                     Palette="{StaticResource RepositoryAnalyserGradientPalette}"
                     />
+                    <metroChart:Legend Grid.Row="1" ItemsSource="{Binding ChartLegendItems}"/>
+                </Grid>
             </TabItem>
             <TabItem Header="{x:Static resw:Resources.List}">
                 <DataGrid
@@ -84,6 +95,13 @@
             </TabItem>
         </TabControl>
 
+        <controls:ProgressRing 
+                        Style="{StaticResource AppProgressRing}"
+                        Grid.Row="0"
+                        IsActive="{Binding IsLoading}"
+                        Visibility="{Binding IsLoading, Converter={StaticResource BoolToVisibilityConverter}}"                      
+                        />
+        
         <DockPanel Grid.Row="1" HorizontalAlignment="Left" Margin="0">
             <circleHeaderButton:CircleHeaderButton 
                 CommandParameter="{Binding ElementName=Root, Path=DataContext}"
