--- a/RepositoryParser/RepositoryParser/View/UsersActivityViews/UserActivityChartView.xaml
+++ b/RepositoryParser/RepositoryParser/View/UsersActivityViews/UserActivityChartView.xaml
@@ -10,6 +10,7 @@
                 xmlns:metroChart="clr-namespace:De.TorstenMandelkow.MetroChart;assembly=De.TorstenMandelkow.MetroChart"
                 xmlns:enums="clr-namespace:RepositoryParser.Helpers.Enums"
                 xmlns:conventers="clr-namespace:RepositoryParser.Conventers"
+                xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
                 mc:Ignorable="d" 
                 d:DesignHeight="600" d:DesignWidth="600"
                 DataContext="{Binding Source={StaticResource Locator}, Path=UsersActivity}"
@@ -17,6 +18,7 @@
     <UserControl.Resources>
         <conventers:CountOfRepositoriesToVisibilityConventer x:Key="CountOfRepositoriesToVisibilityConventer"/>
         <conventers:IntToLenghtConventer x:Key="IntToLenghtConventer"/>
+        <conventers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
     </UserControl.Resources>
     
     <Grid>
@@ -47,8 +49,13 @@
                     ConverterParameter={x:Static enums:VisibilityConventerEnumDirection.Normal},
                     Converter={StaticResource CountOfRepositoriesToVisibilityConventer}}">
             <TabItem Header="{x:Static resw:Resources.Chart}">
-                <ScrollViewer CanContentScroll="True">
-                    <metroChart:StackedBar100Chart
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <ScrollViewer>
+                        <metroChart:StackedBar100Chart
                             x:Name="StackedColumnChartInstance"
                             ChartTitle=""
                             ChartSubTitle=""
@@ -56,12 +63,14 @@
                             ChartBorderThickness="1"
                             ChartMargin="0"
                             Background="Transparent"
-                            ChartLegendVisibility="Collapsed"
+                            ChartLegendVisibility="Visible"
                             Palette="{StaticResource RepositoryAnalyserGradientPalette}"
                             ClipToBounds="False"
                             Height="{Binding CountOfAuthors, Converter={StaticResource IntToLenghtConventer}}"
                             />
-                </ScrollViewer>
+                    </ScrollViewer>
+                    <metroChart:Legend Grid.Row="1" ItemsSource="{Binding ChartLegendItems}"/>
+                </Grid>
             </TabItem>
             <TabItem Header="{x:Static resw:Resources.List}">
                 <DataGrid Grid.Row="1" Grid.Column="0"
@@ -88,7 +97,12 @@
                 </DataGrid>
             </TabItem>
         </TabControl>
-
+        <controls:ProgressRing 
+                        Style="{StaticResource AppProgressRing}"
+                        Grid.Row="0"
+                        IsActive="{Binding IsLoading}"
+                        Visibility="{Binding IsLoading, Converter={StaticResource BoolToVisibilityConverter}}"                      
+                        />
         <DockPanel Grid.Row="1" HorizontalAlignment="Left" Margin="0">
             <circleHeaderButton:CircleHeaderButton 
                 Command="{Binding ExportFileCommand}"
